# insim-mcp

./: .gitignore  CONTRIBUTING.md  README.md  SKILL.md  pyproject.toml
.github/workflows/: publish.yml
docs/use-cases/: autonomous-prospecting-agent.md  competitive-intelligence-alerts.md  debt-collection-followup.md  ecommerce-night-support.md  healthtech-appointment-reminders.md  logistics-delivery-notifications.md  saas-sms-onboarding.md
examples/: claude-desktop-config.json  cursor-config.json  night-support-prompt.md  prospecting-agent.py
src/insim_mcp/: __init__.py  server.py
