[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insim-mcp"
version = "1.0.0"
description = "MCP server connecting AI agents to real mobile telephony — send SMS, make calls, qualify leads through a real phone number"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Reach Technologies SAS", email = "dev@reach-technologies.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Communications :: Telephony",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]
keywords = ["mcp", "sms", "telephony", "ai-agent", "claude", "insim"]

[project.urls]
Homepage = "https://www.insim.app"
Repository = "https://github.com/ReachTechnologies/insim-mcp"
Documentation = "https://github.com/ReachTechnologies/insim-mcp#readme"

[project.scripts]
insim-mcp = "insim_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/insim_mcp"]
